# wxmaxima

./: .appveyor.yml  .clang-format  .clang-tidy  .codacy.yaml  .cvsignore  .drone.yml  .editorconfig  .gitattributes  .gitignore  .mdlrc  .stylelintrc  .travis.yml  .travis.yml.disabled  ACCESSIBILITY.md  AGENTS.md  AUTHORS  AUTHORS.md  AbsCell_8cpp__incl.md5  AbsCell_8h.html  AbsCell_8h__dep__incl.md5  AbsCell_8h__incl.map  AbsCell_8h_source.html  ActualValuesStorageWiz_8h_source.html  AnimationCell_8cpp__incl.map  AnimationCell_8h.html  AnimationCell_8h__dep__incl.map  AnimationCell_8h__dep__incl.md5  AnimationCell_8h__incl.map  AnimationCell_8h_source.html  ArtProvider_8h.html  ArtProvider_8h__dep__incl.md5  ArtProvider_8h__incl.map  ArtProvider_8h__incl.md5  AtCell_8cpp.html  AtCell_8cpp__incl.map  AtCell_8cpp__incl.md5  AtCell_8h_source.html  AutocompletePopup_8cpp.html  AutocompletePopup_8cpp__incl.map  AutocompletePopup_8cpp__incl.md5  (+1434 more)
Doxygen/: .gitignore  AbsCell_8cpp.html  AbsCell_8cpp__incl.map  AbsCell_8cpp__incl.md5  AbsCell_8h.html  AbsCell_8h__dep__incl.map  AbsCell_8h__dep__incl.md5  AbsCell_8h__incl.map  AbsCell_8h__incl.md5  AbsCell_8h_source.html  ActualValuesStorageWiz_8h_source.html  AnimationCell_8cpp.html  AnimationCell_8cpp__incl.map  AnimationCell_8cpp__incl.md5  AnimationCell_8h.html  AnimationCell_8h__dep__incl.map  AnimationCell_8h__dep__incl.md5  AnimationCell_8h__incl.map  AnimationCell_8h__incl.md5  AnimationCell_8h_source.html  AtCell_8cpp.html  AtCell_8cpp__incl.map  AtCell_8cpp__incl.md5  AtCell_8h_source.html  AutocompletePopup_8cpp.html  AutocompletePopup_8cpp__incl.map  AutocompletePopup_8cpp__incl.md5  AutocompletePopup_8h.html  AutocompletePopup_8h__dep__incl.map  AutocompletePopup_8h__dep__incl.md5  AutocompletePopup_8h__incl.map  AutocompletePopup_8h__incl.md5  AutocompletePopup_8h_source.html  Autocomplete_8cpp.html  Autocomplete_8cpp__incl.map  Autocomplete_8cpp__incl.md5  Autocomplete_8h.html  Autocomplete_8h__dep__incl.map  Autocomplete_8h__dep__incl.md5  Autocomplete_8h__incl.map  (+2103 more)
Doxygen/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  (+107 more)
art/: CMakeLists.txt  Makefile.am  README.md  generate_pngs.sh  icons.h  license.txt  maximaicon.xpm  pack_svg_files.sh  readme.txt  wxm.icns  wxmac-doc-wxm.icns  wxmac-doc-wxmx.icns  wxmac-doc.icns  wxmac.icns
data/: .cvsignore  .gitattributes  .gitignore  CMakeLists.txt  Info.plist.in  License.h  Makefile  Makefile.am  Makefile.in  README.md  UnicodeData.h  autocomplete.txt  builtin_commands.txt  changelog.Debian.in  copyright  create_index.py  description.txt  dylibs.sed  generate_pngs.sh  generate_unicodedata.sh  generate_unicodedata.txt  generate_wxmathml.sh  icon.h  info.plist  io.github.wxmaxima_developers.wxMaxima.appdata.xml  io.github.wxmaxima_developers.wxMaxima.desktop  manual_anchors.xml  manual_anchors.xml.gz.h  sampleWorksheet.wxmx  tips.txt  unicode-license.html  valgrind_suppressions.txt  wxMathML.h  wxMathML.lisp  wxMaxima.appdata.xml  wxMaxima.desktop  wxMaxima.desktop.in  wxMaxima.key.enc  wxmathml-cvs.lisp  wxmathml.lisp  (+14 more)
info/: .gitattributes  .gitignore  CMakeLists.txt  Extensions.texi  Introduction.texi  Makefile.am  README.md  README.txt  Troubleshooting.texi  build_index.pl  category-macros.texi  cell-example.wxmx  check_crlf  check_tab  create_index  extract_categories.sh  extract_categories1.awk  extract_categories1.sed  fix_crlf  fix_tab  header.html  include-wxmaxima.texi.in  manual.css  summary.texi  texi2html  texi2html.init  texinfo.tex  wxMaxima.chm  wxMaximaWindow.wxmx  wxmaxima.ca.html  wxmaxima.cs.html  wxmaxima.cs.md  wxmaxima.css  wxmaxima.da.html  wxmaxima.de.html  wxmaxima.de.md  wxmaxima.el.html  wxmaxima.en.html  wxmaxima.en.md  wxmaxima.es.html  (+41 more)
locales/: .cvsignore  .gitattributes  .gitignore  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  README  README.md  ca.po  cs.po  da.po  de.po  el.po  en.po  es.po  fi.po  fr.po  gl.po  hu.po  it.po  ja.po  kab.po  nb.po  pl.po  po4a.cfg  po4a.cfg.in  pt_BR.po  ru.po  tr.po  uk.po  wxMaxima.pot  wxmaxima-ru.po  zh_CN.po  zh_TW.po  zn_CN.po
src/: .cvsignore  .gitattributes  .gitignore  AbsCell.cpp  AbsCell.h  ActualValuesStorageWiz.cpp  ActualValuesStorageWiz.h  ArtProvider.cpp  ArtProvider.h  AtCell.cpp  AtCell.h  Autocomplete.cpp  Autocomplete.h  AutocompletePopup.cpp  AutocompletePopup.h  Autocomplete_Builtins.cpp  BC2Wiz.cpp  BC2Wiz.h  BTextCtrl.cpp  BTextCtrl.h  BackgroundQueue.cpp  BackgroundQueue.h  BetterTeX.cpp  BetterTeX.h  Bitmap.cpp  Bitmap.h  BitmapOut.cpp  BitmapOut.h  BuildConfig.h.cin  ButtonWrapSizer.cpp  ButtonWrapSizer.h  CMakeLists.txt  Cell.cpp  Cell.h  CellParser.cpp  CellParser.h  CellPointers.cpp  CellPointers.h  CellPtr.cpp  CellPtr.h  (+326 more)
test/: .gitignore  CMakeLists.txt  CTestCustom.cmake  Makefile.am  asan_suppressions.txt  build_test_regex.sh  check-lintian.sh.in  check-rpmlint.sh.in  check-wizard-commands.sh.in  check-wxMathML.sh  check-wxMathML.sh.in  check-wxmx-validity.sh.in  check-xml-validity.sh.in  check_no_stray_procs.cmake  corrupt_garbage.wxmx  corrupt_hugevars.wxmx  corrupt_truncated.wxmx  corrupt_wxmx_smoke.sh  diff_smoke_test.sh  foreign-characters.wxm  foreign-characters.wxmx  greek-letters.wxm  install_macports.yml  maxima-testsuite.wxm  misc-problematic-things.wxm  misc-problematic-things.wxmx  other-features.wxm  other-features.wxmx  quit.mac  regex.wxmx  testbench_all_celltypes.wxm  testbench_all_celltypes.wxmx  testbench_automatic.wxmx  testbench_automatic_absCells.wxm  testbench_automatic_atCells.wxm  testbench_automatic_boxes.wxm  testbench_automatic_conjugateCells.wxm  testbench_automatic_diffCells.wxm  testbench_automatic_exptCells.wxm  testbench_automatic_formerCrashes.wxm  (+32 more)
(+4313 files in other folders)
